--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.kovalevskyi.java</groupId>
-    <artifactId>deep</artifactId>
+    <groupId>com.kovalevskyi.java.deep</groupId>
+    <artifactId>core</artifactId>
     <version>0.1-SNAPSHOT</version>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
