--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.kovalevskyi.java.deep</groupId>
+    <groupId>com.dj</groupId>
     <artifactId>core</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.01</version>
 
     <dependencies>
         <dependency>
